<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.bootique.parent</groupId>
        <artifactId>bootique-parent</artifactId>
        <version>0.14</version>
    </parent>

    <groupId>io.bootique.tools</groupId>
    <artifactId>release</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <bq.version>3.0</bq.version>
        <jetty.version>10.0.26</jetty.version>
        <jackson.version>2.19.4</jackson.version>
        <mysql.jdbc.version>8.2.0</mysql.jdbc.version>
        <sqlite.version>3.44.1.0</sqlite.version>

        <mockito.version>4.6.1</mockito.version>
        <junit.jupiter.version>5.10.2</junit.jupiter.version>

        <frontend.plugin.version>1.11.3</frontend.plugin.version>
        <node.version>v14.21.3</node.version>

        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <main.class>io.bootique.tools.release.Application</main.class>
    </properties>

    <repositories>
        <!-- Main artifact repo -->
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <!-- Contains staging artifacts that may not yet be available in Central-->
        <repository>
            <id>oss-sonatype-staging</id>
            <url>https://oss.sonatype.org/content/groups/staging/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>bootique-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.bootique.bom</groupId>
                <artifactId>bootique-bom</artifactId>
                <version>${bq.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.bootique.jetty</groupId>
            <artifactId>bootique-jetty-jakarta-websocket</artifactId>
        </dependency>
        <dependency>
            <groupId>io.bootique.mvc</groupId>
            <artifactId>bootique-mvc-jakarta-mustache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.bootique.logback</groupId>
            <artifactId>bootique-logback</artifactId>
        </dependency>
        <dependency>
            <groupId>io.bootique.jersey</groupId>
            <artifactId>bootique-jersey-jakarta-client</artifactId>
        </dependency>
        <dependency>
            <groupId>io.bootique.jersey</groupId>
            <artifactId>bootique-jersey-jakarta-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>io.bootique.job</groupId>
            <artifactId>bootique-job</artifactId>
        </dependency>
        <dependency>
            <groupId>io.bootique.agrest</groupId>
            <artifactId>bootique-agrest5-jakarta</artifactId>
        </dependency>
        <dependency>
            <groupId>io.bootique.jdbc</groupId>
            <artifactId>bootique-jdbc-hikaricp</artifactId>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-client</artifactId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!--  Db connectors  -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>io.bootique</groupId>
            <artifactId>bootique-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>${frontend.plugin.version}</version>

                <executions>
                    <!-- check and install node and yarn -->
                    <execution>
                        <id>install node and npm</id>
                        <goals>
                            <goal>install-node-and-npm</goal>
                        </goals>
                    </execution>

                    <!-- check and install project dependencies -->
                    <execution>
                        <id>npm install</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <configuration>
                            <arguments>install</arguments>
                        </configuration>
                    </execution>

                    <!-- launch app build -->
                    <execution>
                        <id>npm run build</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <configuration>
                            <arguments>run build</arguments>
                        </configuration>
                    </execution>
                </executions>

                <configuration>
                    <nodeVersion>${node.version}</nodeVersion>
                    <workingDirectory>src/main/assets</workingDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>